there was an issue with the work button because I accidenttly made the text the same color as the button so it wasn't visible. now is working properly

--- a/public/assets/Css/style.css
+++ b/public/assets/Css/style.css
@@ -61,7 +61,7 @@ strong { font-weight: var(--fw-bold) }
     display: inline-block;
     padding: .5em 1.5em;
     background: var(--clr-accent);
-    color: var(--clr-accent);
+    color: var(--clr-dark);
     text-decoration: none;
     cursor: pointer;
     font-size:.8rem;
